# churn_analysis

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: Part_1_exam.docx
docs/source/: conf.py  data.rst  index.rst  modules.rst  notebook.rst
mlartifacts/502767127835434973/models/m-ab86d1e357a54ad18a3dad4151ad4c0f/artifacts/: MLmodel  conda.yaml  input_example.json  model.pkl  requirements.txt  serving_input_example.json
mlruns/0/: meta.yaml
mlruns/502767127835434973/: meta.yaml
mlruns/502767127835434973/e615a0353cb2450b86fa83842799a95a/: meta.yaml
mlruns/502767127835434973/e615a0353cb2450b86fa83842799a95a/metrics/: accuracy  f1_score  precision  recall  roc_auc
mlruns/502767127835434973/e615a0353cb2450b86fa83842799a95a/outputs/m-ab86d1e357a54ad18a3dad4151ad4c0f/: meta.yaml
mlruns/502767127835434973/e615a0353cb2450b86fa83842799a95a/tags/: author  mlflow.runName  mlflow.source.name  purpose
mlruns/502767127835434973/models/m-ab86d1e357a54ad18a3dad4151ad4c0f/: meta.yaml
mlruns/502767127835434973/models/m-ab86d1e357a54ad18a3dad4151ad4c0f/metrics/: accuracy  f1_score  precision  recall  roc_auc
mlruns/502767127835434973/models/m-ab86d1e357a54ad18a3dad4151ad4c0f/tags/: mlflow.modelVersions
mlruns/models/Churn-XGBClassifier/: meta.yaml
mlruns/models/Churn-XGBClassifier/version-1/: meta.yaml
src/: notebook.ipynb  notebook.py  project_structure.txt  xai.ipynb
src/data/: ecommerce.csv
src/mlruns/0/: meta.yaml
