[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["D3ltaD4ve <david.rossig12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
pandas = "^2.3.1"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
xgboost = "^3.0.2"
openpyxl = "^3.1.5"
mlxtend = "^0.23.4"
imbalanced-learn = "^0.13.0"
mlflow = "^3.1.1"
shap = "^0.48.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
